add environment specific workspace configs

--- a/.config/kanshi/home.config
+++ b/.config/kanshi/home.config
@@ -1,8 +1,13 @@
-profile {
+profile default {
 	output eDP-1 enable position 0,0
 }
 
 profile home {
 	output DP-1 enable position 0,0
+	output eDP-1 enable position 2560,360
+}
+
+profile home-2 {
+	output DP-2 enable position 0,0
 	output eDP-1 enable position 2560,360
 }
