--- a/tuning/config.toml
+++ b/tuning/config.toml
@@ -158,6 +158,13 @@ path = "{{ home_dir }}/.config/systemd/user/kanshi.service"
 type = "file"
 state= "link"
 force = true
+src = "{{ home_dir }}/.dotfiles/.config/systemd/user/udiskie.service"
+path = "{{ home_dir }}/.config/systemd/user/udiskie.service"
+
+[[jobs]]
+type = "file"
+state= "link"
+force = true
 src = "/dev/null"
 path = "{{ home_dir }}/.config/systemd/user/pipewire-session-manager.service"
 
