install theme with dunst

--- a/tuning/themes.toml
+++ b/tuning/themes.toml
@@ -18,16 +18,12 @@ argv = [
 ]
 
 
-# [[jobs]]
-# name = "set-up gtk theme"
-# type = "command"
-# chdir = "{{ home_dir }}"
-# command = "bash"
-# argv = [
-#   "-c",
-#   "${HOME}/.dotfiles/gists/install-solarized-theme.sh \
-#     && gsettings set org.gnome.desktop.interface gtk-theme 'Solarized-Dark-Cyan-GTK' \
-#     && gsettings set org.gnome.desktop.interface icon-theme 'Solarized-Cyan-gtk-theme-iconpack' \
-#     && gsettings set org.gnome.desktop.interface cursor-theme 'Adwaita' \
-#     && gsettings set org.gnome.desktop.interface font-name 'Cantarell 11'"
-# ]
+[[jobs]]
+name = "set-up gtk theme"
+type = "command"
+chdir = "{{ home_dir }}/.dotfiles/gists"
+command = "bash"
+argv = [
+  "-c",
+  './install-solarized-theme.sh'
+]
