stabilize tmux yank with the tmux yank plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'jaclu/tmux-menus'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Configuration
 set -g @themepack 'powerline/double/blue'
@@ -47,9 +48,6 @@ bind C-n next-window
 bind-key '"' split-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key c new-window -c "#{pane_current_path}"
-
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
