clone tool repos also if guix is installed

--- a/tuning/programs.toml
+++ b/tuning/programs.toml
@@ -28,7 +28,6 @@ type = "git"
 clone = true
 dest = "{{ home_dir }}/workspace/other/dragon"
 repo = "https://github.com/mwh/dragon.git"
-when = "{{ not has_executable(exe='guix') }}"
 
 [[jobs]]
 name = "dragon: install"
@@ -40,7 +39,7 @@ argv = [
   "-c",
   'make && make install'
 ]
-when = "{{ not has_executable(exe='guix') }}"
+when = "{{ not has_executable(exe='dragon') }}"
 
 
 [[jobs]]
@@ -49,7 +48,6 @@ type = "git"
 clone = true
 dest = "{{ home_dir }}/workspace/other/rofi"
 repo = "https://github.com/lbonn/rofi.git"
-when = "{{ not has_executable(exe='guix') }}"
 
 [[jobs]]
 name = "rofi-wayland: install"
