--- a/.config/systemd/user/kanshi.service
+++ b/.config/systemd/user/kanshi.service
@@ -5,7 +5,7 @@ BindsTo=sway-session.target
 
 [Service]
 Type=simple
-ExecStart=/bin/bash -c '${HOME}/.guix-profile/bin/kanshi'
+ExecStart=/bin/bash -c 'kanshi'
 Restart=on-failure
 
 [Install]
