--- a/.ripgreprc
+++ b/.ripgreprc
@@ -4,6 +4,7 @@
 
 # exclude specific directories
 --glob=!**/.{git,svn,bzr,hg,pc,dep,dot,nib,plst,*cache,clangd}/*
+--glob=!**/{node_modules}/*
 
 # exclude specific filetypes
 --glob=!**/*.{o,so,jar,ser}
