--- a/tuning/programs.toml
+++ b/tuning/programs.toml
@@ -137,7 +137,7 @@ name = "install rust dependencies"
 type = "installercargo"
 crates = [
   "atuin",
-  "updater",
+  "cargo-updater",
   "git-delta",
   "ripgrep",
   "fd-find",
