--- a/tuning/resources.toml
+++ b/tuning/resources.toml
@@ -6,6 +6,7 @@ clone = true
 dest = "{{ home_dir }}/workspace/other/nerd-fonts"
 repo = "https://github.com/ryanoasis/nerd-fonts.git"
 
+
 [[jobs]]
 name = "nerd-fonts: install"
 needs = ["nerd-fonts: repository"]
@@ -26,4 +27,15 @@ command = "bash"
 argv = [
   "-c",
   './install-solarized-theme.sh'
+]
+
+
+[[jobs]]
+name = "install llama models"
+type = "command"
+chdir = "{{ home_dir }}/.dotfiles/gists"
+command = "bash"
+argv = [
+  "-c",
+  './install-llama-models.sh'
 ]
