work around tmux color disparity

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # upgrade $TERM
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # $ git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 # set default Tmux shell
