--- a/tuning/config.toml
+++ b/tuning/config.toml
@@ -41,8 +41,8 @@ path = "{{ home_dir }}/.config/containers/registries.conf"
 type = "file"
 state= "link"
 force = true
-src = "{{ home_dir }}/.dotfiles/.config/ctags/config.conf"
-path = "{{ home_dir }}/.config/ctags/config.conf"
+src = "{{ home_dir }}/.dotfiles/.config/ctags/config.ctags"
+path = "{{ home_dir }}/.config/ctags/config.ctags"
 
 [[jobs]]
 type = "file"
