--- a/.ripgreprc
+++ b/.ripgreprc
@@ -3,7 +3,7 @@
 --smart-case
 
 # exclude specific directories
---glob=!**/.{git,svn,bzr,hg,pc,dep,dot,nib,plst,*cache,clangd}/*
+--glob=!**/.{conan,git,svn,bzr,hg,pc,dep,dot,nib,plst,*cache,clangd}/*
 --glob=!**/{node_modules}/*
 
 # exclude specific filetypes
