--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -49,7 +49,6 @@
     "!Join sequence"
   ],
   "pyright.disableDiagnostics": false,
-  "prettier.formatterPriority": -1,
   "diagnostic-languageserver.filetypes": {
     "cpp": [
       "clangtidy",
@@ -87,6 +86,22 @@
     ],
     "systemd": "systemd-analyze"
   },
+  "prettier.disableLanguages": [
+    "c",
+    "cpp",
+    "dockerfile",
+    "go",
+    "java",
+    "json",
+    "kotlin",
+    "lua",
+    "python",
+    "ruby",
+    "rust",
+    "sh",
+    "typescript",
+    "yaml",
+  ],
   "diagnostic-languageserver.formatFiletypes": {
     "python": [
       "black",
