--- a/container-images/llama-cpp-python-server-rocm/Dockerfile
+++ b/container-images/llama-cpp-python-server-rocm/Dockerfile
@@ -11,20 +11,21 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   pkg-config \
   build-essential
 
+ARG ROCM_VERSION=6.0.2
+
 RUN mkdir --parents --mode=0755 /etc/apt/keyrings \
   && wget https://repo.radeon.com/rocm/rocm.gpg.key -O - | \
   gpg --dearmor | tee /etc/apt/keyrings/rocm.gpg > /dev/null \
-  && echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/rocm.gpg] https://repo.radeon.com/rocm/apt/6.0 jammy main" > /etc/apt/sources.list.d/rocm.list \
+  && echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/rocm.gpg] https://repo.radeon.com/rocm/apt/${ROCM_VERSION} jammy main" > /etc/apt/sources.list.d/rocm.list \
   && echo 'Package: *\nPin: release o=repo.radeon.com\nPin-Priority: 600' > /etc/apt/preferences.d/rocm-pin-600 \
   && apt-get update \
   && apt-get install -y --no-install-recommends rocm-hip-sdk
 
-ARG VERSION=0.2.20
-
 ARG OVERRIDE_GFX_VERSION=11.0.2
 ENV HSA_OVERRIDE_GFX_VERSION=${OVERRIDE_GFX_VERSION}
 
-RUN  CC=hipcc CXX=hipcc CMAKE_ARGS="-DLLAMA_HIPBLAS=on" pip install llama-cpp-python[server]==${VERSION}
+ARG LLAMA_CPP_VERSION=0.2.44
+RUN CC=hipcc CXX=hipcc CMAKE_ARGS="-DLLAMA_HIPBLAS=on" pip install llama-cpp-python[server]==${LLAMA_CPP_VERSION}
 
 ENV HOST=0.0.0.0
 ENV PORT=8000
