install podman-compose

--- a/tuning/programs.toml
+++ b/tuning/programs.toml
@@ -121,18 +121,19 @@ argv = [
   "install",
   "--user",
   "--upgrade",
-  "poetry",
-  "thefuck",
-  "pylint",
-  "flake8",
-  "pyright",
-  "pynvim",
-  "debugpy",
-  "black",
   "autopep8",
-  "jedi-language-server",
   "bandit",
-  "cfn-lint"
+  "black",
+  "cfn-lint",
+  "debugpy",
+  "flake8",
+  "jedi-language-server",
+  "podman-compose",
+  "poetry",
+  "pylint",
+  "pynvim",
+  "pyright",
+  "thefuck",
 ]
 state = "present"
 
