--- a/container-images/llama-cpp-python-server-rocm/Dockerfile
+++ b/container-images/llama-cpp-python-server-rocm/Dockerfile
@@ -1,15 +1,13 @@
-FROM ubuntu:jammy
+FROM ubuntu:jammy AS rocm_base
+
+LABEL maintainer="Dominikus Gierlach <dominik.gierlach@gmail.com>"
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-  ninja-build \
-  libopenblas-dev \
-  python3-pip \
+  ca-certificates \
   wget \
   gpg \
-  git \
-  cmake \
   pkg-config \
-  build-essential
+  && rm -rf /var/lib/{apt,dpkg,cache,log}/
 
 ARG ROCM_VERSION=6.0.2
 
@@ -17,15 +15,40 @@ RUN mkdir --parents --mode=0755 /etc/apt/keyrings \
   && wget https://repo.radeon.com/rocm/rocm.gpg.key -O - | \
   gpg --dearmor | tee /etc/apt/keyrings/rocm.gpg > /dev/null \
   && echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/rocm.gpg] https://repo.radeon.com/rocm/apt/${ROCM_VERSION} jammy main" > /etc/apt/sources.list.d/rocm.list \
-  && echo 'Package: *\nPin: release o=repo.radeon.com\nPin-Priority: 600' > /etc/apt/preferences.d/rocm-pin-600 \
-  && apt-get update \
-  && apt-get install -y --no-install-recommends rocm-hip-sdk
+  && echo 'Package: *\nPin: release o=repo.radeon.com\nPin-Priority: 600' > /etc/apt/preferences.d/rocm-pin-600
+
+# Allow caching the runtime base even if llama_cpp is rebuilt
+FROM rocm_base AS runtime_base
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  python3-pip \
+  rocm-hip-libraries \
+  && rm -rf /var/lib/{apt,dpkg,cache,log}/
+
+
+FROM runtime_base AS builder
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  ninja-build \
+  libopenblas-dev \
+  git \
+  cmake \
+  pkg-config \
+  build-essential \
+  rocm-hip-sdk \
+  && rm -rf /var/lib/{apt,dpkg,cache,log}/
 
 ARG OVERRIDE_GFX_VERSION=11.0.2
 ENV HSA_OVERRIDE_GFX_VERSION=${OVERRIDE_GFX_VERSION}
+ARG LLAMA_CPP_VERSION=0.2.54
 
-ARG LLAMA_CPP_VERSION=0.2.44
-RUN CC=hipcc CXX=hipcc CMAKE_ARGS="-DLLAMA_HIPBLAS=on" pip install llama-cpp-python[server]==${LLAMA_CPP_VERSION}
+RUN CC=hipcc CXX=hipcc CMAKE_ARGS="-DLLAMA_HIPBLAS=on" pip install --user llama-cpp-python[server]==${LLAMA_CPP_VERSION}
+
+FROM runtime_base AS final
+ARG OVERRIDE_GFX_VERSION=11.0.2
+ENV HSA_OVERRIDE_GFX_VERSION=${OVERRIDE_GFX_VERSION}
+
+COPY --from=builder /root/.local /root/.local
 
 ENV HOST=0.0.0.0
 ENV PORT=8000
