--- a/.gitmodules
+++ b/.gitmodules
@@ -45,3 +45,7 @@
 [submodule "zsh-plugins/flatpak-zsh-completion"]
 	path = zsh-plugins/flatpak-zsh-completion
 	url = https://github.com/bilelmoussaoui/flatpak-zsh-completion
+[submodule ".config/ranger/plugins/ranger-zoxide"]
+	path = .config/ranger/plugins/ranger-zoxide
+	url = https://github.com/jchook/ranger-zoxide.git
+	branch = master
