portuguese work profile

--- a/.config/kanshi/work.config
+++ b/.config/kanshi/work.config
@@ -7,6 +7,11 @@ profile dual {
     output DP-1 enable position 0,0
 }
 
+profile dual-2 {
+    output eDP-1 enable position 1920,0
+    output HDMI-A-1 enable position 0,0
+}
+
 profile man-dual {
     output eDP-1 enable position 0,360 mode 1920x1080
     output DP-1 enable position 1920,0 mode 2560x1440
