--- a/tuning/systemd.toml
+++ b/tuning/systemd.toml
@@ -30,6 +30,13 @@ path = "{{ home_dir }}/.config/systemd/user/kanshi.service"
 type = "file"
 state= "link"
 force = true
+src = "{{ home_dir }}/.dotfiles/.config/systemd/user/sway-alternate-layouts.service"
+path = "{{ home_dir }}/.config/systemd/user/sway-alternate-layouts.service"
+
+[[jobs]]
+type = "file"
+state= "link"
+force = true
 src = "{{ home_dir }}/.dotfiles/.config/systemd/user/udiskie.service"
 path = "{{ home_dir }}/.config/systemd/user/udiskie.service"
 
